Add mvnw (maven wrapper scripts)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
+
 cache:
   directories:
   - $HOME/.m2
+
 branches:
   only:
   - master
+
+install:
+  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
