--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,28 @@
+sudo: required
+dist: trusty
+
 language: java
 jdk:
   - openjdk8
 
 cache:
   directories:
-  - $HOME/.m2
+  - $HOME/.m2/repository
+
+before_install:
+  # allocate commits to CI, not the owner of the deploy key
+  - git config user.name "opentracingci"
+  - git config user.email "opentracingci+opentracing@googlegroups.com"
+  # setup https authentication credentials, used by ./mvnw release:prepare
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://$GH_TOKEN:@github.com" > .git/credentials
+
+script:
+  - ./travis/publish.sh
+
+install:
+  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 branches:
   only:
   - master
-
-install:
-  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
