--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
  
   <groupId>io.opentracing.contrib</groupId>
-  <artifactId>aws-xray</artifactId>
+  <artifactId>java-xray-tracer</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <description>OpenTracing implementation for AWS X-Ray</description>
 
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/skylight-ipv/opentracing-java-aws-xray/issues</url>
+    <url>https://github.com/opentracing-contrib/java-xray-tracer/issues</url>
   </issueManagement>
 
   <properties>
