--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     -->
     <aws.xray.sdk.version>2.2.1</aws.xray.sdk.version>
     <junit.version>5.4.0</junit.version>
+    <mockito.version>2.28.2</mockito.version>
     <opentracing.version>0.31.0</opentracing.version>
     <slf4j.version>1.7.26</slf4j.version>
   </properties>
@@ -77,6 +78,11 @@
       <artifactId>logback-classic</artifactId>
       <version>1.2.3</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
